# pokemon-search-v4

./: pyproject.toml
app/app/: items.py  middlewares.py  settings.py
app/app/spiders/: scrapy_blog_spider.py
