[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["misaosyushi <tujitamisaki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
