[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["misaosyushi <tujitamisaki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3
skip = [".bzr", ".direnv", ".eggs", ".git", ".hg",
        ".mypy_cache", ".nox", ".pants.d", ".svn",
        ".tox", ".venv", "_build", "buck-out", "build",
        "dist", "node_modules", "venv"]
